--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body onload="loadpage()">
     <div class="container">
+        <h1>ANDREY AREVALO</h1>
         <h2>Validador de contraseñas</h2>
         <div class="inputs">
             <input type="password" id="password" placeholder="Ingrese su contraseña">
@@ -20,8 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         function validar() {
-            alert("Hola soy un botón de una función")
-            console.log("Hola soy un botón de una función")
+            alert("Bienvenido al sistema")
         }
 
         function loadpage() {
