--- a/HTML/validator.html
+++ b/HTML/validator.html
@@ -25,8 +25,8 @@
         <a href="../index.html">Volver atrás</a>
     </div>
     <!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>-->
-    <script src="../Js/validator/validator.js"></script>
-    <script src="../Js/vendor/sweetalert2.js"></script>
+    <script src="..Js/validator/validator.js"></script>
+    <script src="..Js/vendor/sweetalert2.js"></script>
 </body>
 
 </html>
