--- a/HTML/TODO.html
+++ b/HTML/TODO.html
@@ -16,7 +16,7 @@
         <div id="task"></div>
     </div>
 
-    <script src="/Js/TODO.js"></script>
+    <script src="../Js/TODO.js"></script>
 </body>
 
 </html>
