--- a/HTML/TODO.html
+++ b/HTML/TODO.html
@@ -14,6 +14,7 @@
             <button id="add">Agregar</button>
         </div>
         <div id="task"></div>
+        <a href="../index.html" style="display: block; margin-top: 24px;">Volver atrás</a>
     </div>
 
     <script src="../Js/TODO.js"></script>
