--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
     <menu>
         <li><a href="HTML/validator.html">Validador</a></li>
+        <li><a href="HTML/calculator.html">Calcular edad</a></li>
         <li><a href="HTML/TODO.html">Manipular DOM</a></li>
     </menu>
 </body>
