add function calcularedad

--- a/HTML/calculator.html
+++ b/HTML/calculator.html
@@ -16,5 +16,6 @@
 
     </div>
     <script src="../Js/calculator/calculator.js"></script>
+        <script src="../Js/vendor/sweetalert2.js"></script>
 </body>
 </html>
